@@ -1,3 +1,11 @@
+2011-12-28  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	Backport from mainline
+	2011-12-28  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/51623
+	* gcc.target/powerpc/pr51623.c: New file.
+
 2011-12-28  Uros Bizjak  <ubizjak@gmail.com>
 
 	* gcc.dg/torture/pr50396.c: Use dg-add-options ieee.
